Home responsive terminado y pulido. Quité todas las clases de spacing y sizing del html, y las coloque directamente en mi main.css. Eliminé la mayor cantidad de !important's que pude, aunque el uso de BootStrap me impide quitarlos por completo ya que necesito pisar ciertas propiedades obligatoriamente. Arregle bugs de visibilidad causados por margenes innecesarios que me obligaban a colocar overflow:hidden donde no me resultaba comodo.

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
   --main: #0b0d17;
   --alt: #d0d6f9;
   --white: #ffffff;
+  --template-glass-1: rgba(70, 70, 70, 0.2);
 }
 
 body {
@@ -25,12 +26,12 @@ h1, h2, h3, h4, .subheading-1 {
   font-family: "Bellefair", sans-serif;
 }
 
-.offcanvas--navbar {
-  display: block;
+header {
+  height: 100vh;
 }
 
-.horizontal--navbar {
-  display: none;
+.container-fluid {
+  padding-right: 0;
 }
 
 .navbar {
@@ -38,45 +39,28 @@ h1, h2, h3, h4, .subheading-1 {
   font-size: 16px;
   letter-spacing: 2.7px;
   text-transform: uppercase;
-  margin: auto -0.75rem;
-}
-
-.nav-item {
-  box-sizing: content-box;
-  margin-bottom: 10px;
-  padding-bottom: 1px;
-}
-
-.nav-link {
-  width: fit-content;
-  color: #fff;
-}
-
-.nav-link:hover {
-  color: #fff;
-}
-
-.nav-link:focus {
-  color: #fff;
-}
-
-.nav-link.active {
-  color: #fff !important;
-  border-bottom: 1px solid var(--white);
+  margin-bottom: 1.5rem;
+  padding: 20px 10px;
 }
 
 .offcanvas {
   background-color: rgba(105, 105, 105, 0.1);
   backdrop-filter: blur(80px);
+  width: 75% !important;
+}
+
+.offcanvas-header {
+  margin: .5rem;
 }
 
 .offcanvas-backdrop {
   background-color: transparent;
 }
 
-.close-btn {
-  background-color: transparent;
-  border: none;
+.navbar-brand {
+  margin: 0;
+  padding: 0;
+  align-self: center;
 }
 
 .navbar-brand .logo{
@@ -84,16 +68,55 @@ h1, h2, h3, h4, .subheading-1 {
   height: 40px;
 }
 
+.nav-item {
+  margin: 0 0 20px 20px;
+}
+
+.nav-link {
+  padding: 0;
+  color: #fff;
+  width: fit-content;
+}
+
+.nav-link.active {
+  color: #fff !important;
+  border-bottom: 1px solid var(--white);
+}
+
+.nav-link:hover {
+  color: #fff;
+}
+
+.nav-link:focus {
+  color: var(--alt);
+}
+
+.nav-link span {
+  font-weight: bold;
+  padding-right: .5rem;
+}
+
+.close-btn {
+  background-color: transparent;
+  border: none;
+}
+
+.title-container {
+  margin: 0 auto 25px;
+  width: 75%;
+}
+
 h5 {
   font-family: "Barlow Condensed";
   font-size: 1rem;
   letter-spacing: 2.7px;
   text-transform: uppercase;
+  text-align: center;
 }
 
 h1 {
   font-size: 5rem;
-  padding: 10px ;
+  padding: 10px;
   text-transform: uppercase;
   color: var(--white);
 }
@@ -101,7 +124,6 @@ h1 {
 .main-p {
   font-size: 15px;
   font-family: "Barlow";
-  margin: auto 25px;
   text-align: center;
 }
 
@@ -122,7 +144,6 @@ h1 {
   width: 150px;
   height: 150px;
  
-
   background-color: var(--white);
   border: none;
   border-radius: 50%;
@@ -211,46 +232,126 @@ h2 {
   color: var(--white);
 } 
 
-@media (min-width: 768px) {
+@media (min-width: 576px) {
   body {
     background-image: url(../assets/home/background-home-tablet.jpg);
     background-position: center;
   }
 
-  .offcanvas--navbar {
-    display: none !important;
+  .navbar {
+    padding: 0;
   }
 
-  .horizontal--navbar {
+  .navbar .container-fluid {
+    align-items: flex-start;
+    padding-left: 45px;
+  }
+
+  .navbar-brand {
     display: block;
-    padding-top: 0;
   }
 
-  .horizontal--navbar .nav {
-    align-self: flex-start;
-    background-color: rgba(105, 105, 105, 0.1);
-    backdrop-filter: blur(0px);
-  } 
-
-  .horizontal--navbar .nav-link {
-    font-size: 0.875rem;
-    color: var(--white);
-    padding: 25px 25px;
+  .navbar-brand .logo {
+    width: 48px;
+    height: 48px;
   }
+
+  .offcanvas {
+    backdrop-filter: none;
+  }
+
+  .navbar-nav {
+    background-color: var(--template-glass-1);
+    backdrop-filter: blur(2px);
+    padding: 0 35px;
+  }
+
+  .navbar-nav .nav-item {
+    margin: auto 1rem;
+  }
+  
+  .navbar-nav .nav-link {
+    display: block;
+    width: 100%;
+    padding: 2.1rem 0 !important;
+    border-bottom: 1px solid transparent ;
+  }
+
+  .navbar-nav .nav-link.active {
+    border-bottom: 1px solid var(--white) ;
+  }
+  
+  .navbar-nav .nav-link span {
+    display: none;
+  }
+
+  .navbar-nav .nav-link:hover {
+    border-bottom: 1px rgba(255, 255, 255, 0.5)  solid;
+  }
+  
+  h5 {
+    font-size: 1.25rem;
+    letter-spacing: 3.38px;
+  }
+
+  h1 {
+    font-size: 9.375rem;
+  }
+
+  .main-p {
+    font-size: 1rem;
+    line-height: 28px;
+    margin: auto 15%;
+  }
+
+  .explore-ctr {
+    min-height: 20rem;
+  }
+
+  .explore__btn {
+    width: 242px;
+    height: 242px;
+
+    font-size: 32px;
+    letter-spacing: 2px;
+  }
+
 }
-
-
-
-
-
-
-
-
-
 
 
 @media (min-width: 1200px) {
   body {
     background-image: url(../assets/home/background-home-desktop.jpg);
   }
+
+  .navbar .container-fluid {
+    margin-top: 1.8rem;
+    padding-left: 55px;
+    align-items: center;
+  }
+
+  .navbar-nav {
+    justify-content: center;
+    padding-right: 10%;
+    width: 65%;
+    max-width: 900px;
+    background-color: var(--template-glass-1);
+    backdrop-filter: blur(10px);
+  }
+
+  .navbar-nav::after {
+    --width: 50%;
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: calc(var(--width) * (-1) + 30px);
+    width: var(--width);
+    height: 2px;
+    background-color: rgba(255, 255, 255, 0.25);
+  }
+
+  .navbar-nav .nav-link span {
+    display: inline;
+  }
+
 }
